@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007, 2008 David Shaw <dshaw@jabberwocky.com>
+ * Copyright (C) 2007, 2008, 2009 David Shaw <dshaw@jabberwocky.com>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -110,8 +110,8 @@ main(int argc,char *argv[])
 
       case OPT_VERSION:
       case 'V':
-	printf("paperkey " VERSION "\n");
-	printf("Copyright (C) 2007, 2008 David Shaw\n");
+	printf("%s\n",PACKAGE_STRING);
+	printf("%s\n",COPYRIGHT_STRING);
 	printf("This is free software.  You may redistribute copies of it"
 	       " under the terms of\n");
 	printf("the GNU General Public License"
